[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "python-project-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=8.4.0",
]
